<resources>
    <string name="ApplicationName">EIDSS</string>
    <string name="ApplicationLongName">Electronic Integrated Disease Surveillance System</string>
    <string name="ScreenDensity">mdpi (base screen ~160dpi)</string>
    <string name="Copyright">Copyright © 2005-%d Black &amp; Veatch Special Projects Corp.</string>
    <string name="TitleMainMenu">Main Menu</string>
    <string name="TitleLocalLogin">Local Login</string>
    <string name="TitleSetLocalPassword">Set Local Password</string>
    <string name="TitleChangeLocalPassword">Change Local Password</string>
    <string name="TitleHumanCase">Human Case</string>
    <string name="TitleLivestockCase">Livestock Case</string>
    <string name="TitleAvianCase">Avian Case</string>
    <string name="TitleHumanCaseList">Human Case List</string>
    <string name="TitleVetCaseList">Veterinary Case List</string>
    <string name="TitleLoadReferences">Load References</string>
    <string name="TitleLoadLists">Load Lists</string>
    <string name="TitleSettings">Settings</string>
    <string name="TitleLoadFile">Load file</string>
    <string name="TitleLoadRefFile">Load referencies file</string>
    <string name="TitleLoadListFile">Load lists file</string>
    <string name="TitleSaveFile">Save file</string>
    <string name="TitleNewFolder">Enter new folder\'s name</string>
    <string name="SynchronizeHumanCases">Online Synchronization</string>
    <string name="SynchronizeVetCases">Online Synchronization</string>
    <string name="SynchronizeAsSession">Online Synchronization</string>
    <string name="SynchronizeAllCases">Online Synchronization</string>
    <string name="LocalLogin">Local Login</string>
    <string name="Journals">Journals</string>
    <string name="System">System</string>
    <string name="VetCase">Veterinary Case</string>
    <string name="HumanCaseList">Human Cases</string>
    <string name="VeterinaryCaseList">Veterinary Cases</string>
    <string name="ASSessionList">Active Surveillance Sessions</string>
    <string name="HumanCase">Human Case</string>
    <string name="AvianCase">Avian Case</string>
    <string name="LivestockCase">Livestock Case</string>
    <string name="ASSession">Active Surveillance Session</string>
    <string name="NewHumanCase">New Human Case</string>
    <string name="NewAvianCase">New Avian</string>
    <string name="NewLivestockCase">New LS</string>
    <string name="NewAvianCaseFull">New Avian Case</string>
    <string name="NewLivestockCaseFull">New Livestock Case</string>
    <string name="SynchronizeCase">Sync</string>
    <string name="Synchronization">Synchronization</string>
    <string name="OnlineSynchronization">Online Synchronization</string>
    <string name="UnloadCasesFile">Save Cases to File</string>
    <string name="CheckForUpdates">Check for Application Updates</string>
    <string name="DeleteSynchronizedCases">Delete All Synchronized Records</string>
    <string name="LoadReferences">Update References</string>
    <string name="LoadListsOnline">Online Lists Update</string>
    <string name="LoadListsFile">Load Lists from File</string>
    <string name="LoadReferencesOnline">Online References Update</string>
    <string name="LoadReferencesFile">Load References from File</string>
    <string name="Utilities">Utilities</string>
    <string name="Updates">Updates</string>
    <string name="SystemInfo">Info</string>
    <string name="RestoreDefaults">Restore Defaults</string>
    <string name="ApplicationMode">Application Mode</string>
    <string name="Language">Language</string>
    <string name="DefaultRegion">Default Region</string>
    <string name="DefaultRayon">Default Rayon</string>
    <string name="FilterSamplesByDiagnosis">Filter Samples by Diagnosis</string>
    <string name="NumberRecordsList">Number of Records loaded from the beginning in the List Forms</string>
    <string name="ServerUrl">Server Connection URL</string>
    <string name="CheckConnection">Check Connection</string>
    <string name="ApplicationLockingTimeout">Application Locking Timeout</string>
    <string name="ServerResponseTimeout">Server Response Timeout</string>
    <string name="OneToHundred">Value from 1 to 100</string>
    <string name="Statistics">Statistics</string>
    <string name="HumanCasesTotal" formatted="false">Human Cases: Total %d, Synchronized %d</string>
    <string name="VeterinaryCasesTotal" formatted="false">Veterinary Cases: Total %d, Synchronized %d</string>
    <string name="DateOnlineSynchronization">Date of last Online Synchronization</string>
    <string name="DateReferencesUpdate">Date of Last References Update</string>
    <string name="Version">version</string>
    <string name="VersionTemporary">EIDSS version 6</string>
    <string name="OnlineSynMenu">Online Synchronization</string>
    <string name="OfflineSynMenu">Save Cases to File</string>
    <string name="OfflineSynMenuShort">Save Cases to File</string>
    <string name="OfflineSynSessionMenu">Save Sessions to File</string>
    <string name="OfflineSynOneMenu">Save Case to File</string>
    <string name="OfflineSynSessionOneMenu">Save Session to File</string>
    <string name="ConnectionOk">Connection to the server successfully checked</string>
    <string name="SettingsSaveOk">Settings were successfully saved.</string>
    <string name="SettingsSaveErr">Settings were not saved because of error.</string>
    <string name="ConnectionErr">Connection to the server can’t be established</string>
    <string name="SynchronizedDeleteConfirm">All the records in status “Synchronized” will be deleted from the device. Delete records?</string>
    <string name="SynchronizedDeleteOk">Records deleted successfully.</string>
    <string name="WaitDownloading">Loading application</string>
    <string name="NoNewVersion">The application is up to date.</string>
    <string name="NewVersionDownloadConfirm">A new version of application is available on the server. Do you want to download it?</string>
    <string name="NewVersionDownloaded">To install a new version of the application close the program and launch downloaded setup file.</string>
    <string name="DownloadingAborted">Downloading is aborted.</string>
    <string name="ErrorSaveAppFile">Saving application file error.</string>
    <string name="HumanCaseImageDescription">HC</string>
    <string name="VetCaseImageDescription">VC</string>
    <string name="ASSessionImageDescription">AS</string>
    <string name="Space"></string>
    <string name="Exit">Exit</string>
    <string name="Ok">OK</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Cancel">Cancel</string>
    <string name="Abort">Abort</string>
    <string name="Remove">Remove</string>
    <string name="Refresh">Refresh</string>
    <string name="Continue">Continue</string>
    <string name="Login">Login</string>
    <string name="New">New</string>
    <string name="ChangePassword">Change Password</string>
    <string name="Close">Close</string>
    <string name="ShowMore">More</string>
    <string name="Save">Save</string>
    <string name="Copy">Copy</string>
    <string name="Load">Load</string>
    <string name="Create">Create</string>
    <string name="Delete">Delete</string>
    <string name="Last">Last</string>
    <string name="First">First</string>
    <string name="Middle">Middle</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Total">Total</string>
    <string name="Dead">Dead</string>
    <string name="Sick">Sick</string>
    <string name="LoginOrganization">User Organization</string>
    <string name="LoginName">User Name</string>
    <string name="OldPassword">Old Password</string>
    <string name="NewPassword">New Password</string>
    <string name="LoginPassword">Password</string>
    <string name="SetLocalPassword">Set Local Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="GetCoordinates">Get coordinates from the GPS</string>
    <string name="ClearDate"> X </string>
    <string name="Created">Created:</string>
    <string name="ConfirmSaveCase">Do you want to save changes and close the form?</string>
    <string name="ConfirmCancelCase">Do you want to cancel all the changes and close the form?</string>
    <string name="ConfirmToDeleteNewCase">Selected case was not sent to the server and will be deleted from the device. Delete the case?</string>
    <string name="ConfirmToDeleteNewCases">Selected cases were not sent to the server and will be deleted from the device. Delete cases?</string>
    <string name="ConfirmToDeleteSynCase">Selected case was already sent to the server and will be deleted only from the device. Delete the case?</string>
    <string name="ConfirmToDeleteSynCases">Selected cases were already sent to the server and will be deleted only from the device. Delete cases?</string>
    <string name="ConfirmToDeleteNewSession">Selected session was not sent to the server and will be deleted from the device. Delete the session?</string>
    <string name="ConfirmToDeleteNewSessions">Selected sessions were not sent to the server and will be deleted from the device. Delete sessions?</string>
    <string name="ConfirmToDeleteSynSession">Selected session was already sent to the server and will be deleted only from the device. Delete the session?</string>
    <string name="ConfirmToDeleteSynSessions">Selected sessions were already sent to the server and will be deleted only from the device. Delete sessions?</string>
    <string name="ConfirmSaveSynchCase">Do you want to save changes before synchronization?</string>
    <string name="ConfirmRestoreDefaults">Restore settings to default state?</string>
    <string name="NothingToDelete">Nothing selected to delete.</string>
    <string name="FieldMandatory">The field \'%s\' is mandatory</string>
    <string name="SpeciesMandatory">List of Species can\'t be empty</string>
    <string name="SpeciesTotalLessDeadSick"> \'Total\' can\'t be less than sum of \'Dead\' and \'Sick\'</string>
    <string name="DatesCheck" formatted="false">%s must be earlier or the same as %s</string>
    <string name="DateOfBirthCheckCurrent">Date of Birth must be earlier or the same as Current Date</string>
    <string name="DateOfSymptomCheckCurrent">Date of Symptoms Onset must be earlier or the same as Current Date</string>
    <string name="DateOfDiagnosisCheckCurrent">Date of Diagnosis must be earlier or the same as Current Date</string>
    <string name="DateOfDiagnosisCheckNotification">Date of Diagnosis must be earlier or the same as Notification Date</string>
    <string name="DateOfBirthCheckDiagnosis">Date of Birth must be earlier or the same as Diagnosis Date</string>
    <string name="DateOfBirthCheckNotification">Date of Birth must be earlier or the same as Notification Date</string>
    <string name="DateOfBirthCheckEntered">Date of Birth must be earlier or the same as First Entered Date</string>
    <string name="DateOfSymptomCheckDiagnosis">Date of Symptoms Onset must be earlier or the same as Diagnosis Date</string>
    <string name="DateOfEnteredCheckDiagnosis">Date of Initial Report must be earlier or the same as Diagnosis Date</string>
    <string name="DateOfReportCheckCurrent">Date of Initial Report must be earlier or the same as Current Date</string>
    <string name="DateOfStartOfSignsCheckCurrent">Date of Start of Signs must be earlier or the same as Current Date</string>
    <string name="DateFieldCollectionCheckCurrent">Collection Date must be earlier or the same as Current Date</string>
    <string name="DateFieldCollectionCheckSent">Collection Date must be earlier or the same as Sent Date</string>
    <string name="AgeTypeCheck">Fields \'Age\' and \'Age Type\' should be set or reset together.</string>
    <string name="DateOfSessionStartCheckSessionEnd">Session Start Date must be earlier or the same as Session End Date</string>
</resources>