<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:eidss="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/Refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="103"
        android:title="@string/SynchronizeCase"
        eidss:showAsAction="always" />

    <item android:id="@+id/Add"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="100"
        android:title="@string/Create"
        eidss:showAsAction="ifRoom" />

    <item android:id="@+id/Save"
        android:icon="@drawable/ic_action_save"
        android:orderInCategory="101"
        android:title="@string/Save"
        eidss:showAsAction="ifRoom" />

    <item android:id="@+id/Remove"
        android:icon="@drawable/ic_action_discard"
        android:orderInCategory="102"
        android:title="@string/Remove"
        eidss:showAsAction="ifRoom" />

    <item android:id="@+id/More"
        android:icon="@drawable/ic_action_next"
        android:orderInCategory="104"
        android:title="@string/ShowMore"
        eidss:showAsAction="always" />
</menu>