<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/UnderScrollLayout">

            <View
                    style="@style/ButtonSpaceItem"/>
            <Button
                    android:id="@+id/LoadListsOnline"
                    style="@style/CommonButton.Port"
                    android:text="@string/LoadListsOnline" />

            <TextView
                    style="@style/Separator"/>
            <View
                    style="@style/ButtonSpaceItem"/>
            <Button
                    android:id="@+id/LoadListsFile"
                    style="@style/CommonButton.Port"
                    android:text="@string/LoadListsFile" />

            <TextView
                    style="@style/Separator"/>
            <View
                style="@style/ButtonSpaceItem"/>
            <Button
                android:id="@+id/LoadReferencesOnline"
                style="@style/CommonButton.Port"
                android:text="@string/LoadReferencesOnline" />

            <TextView
                style="@style/Separator"/>
            <View
                style="@style/ButtonSpaceItem"/>

            <Button
                android:id="@+id/LoadReferencesFile"
                style="@style/CommonButton.Port"
                android:text="@string/LoadReferencesFile" />

            <TextView
                style="@style/Separator"/>
            <View
                style="@style/ButtonSpaceItem"/>

            <Button
                android:id="@+id/CheckForUpdates"
                style="@style/CommonButton.Port"
                android:text="@string/CheckForUpdates" />

        </LinearLayout>
    </ScrollView>

