<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:eidss="http://schemas.android.com/apk/res-auto" >


    <item android:id="@+id/Add"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="100"
        android:title="@string/Create"
        android:visible="true"
        eidss:showAsAction="always" />

    <item android:id="@+id/Refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="101"
        android:title="@string/SynchronizeCase"
        android:visible="true"
        eidss:showAsAction="ifRoom" />

    <item android:id="@+id/Remove"
        android:icon="@drawable/ic_action_discard"
        android:orderInCategory="102"
        android:title="@string/Remove"
        android:visible="false"
        eidss:showAsAction="ifRoom"
        />
</menu>