<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CommonLayout.Login">

    <TextView
        android:id="@+id/ApplicationNameLabel"
        style="@style/LoginHeader"/>

    <LinearLayout
        style="@style/LoginLayout.Port"

        >

        <TextView
            android:id="@+id/label31"
            style="@style/LoginMessage"/>
        <TextView
            style="@style/SpaceItem" />
        <EditText
            android:id="@+id/LoginPassword"
            style="@style/LoginPassword"
            android:hint ="@string/SetLocalPassword"/>
        <TextView
            style="@style/SpaceItem" />
        <EditText
            android:id="@+id/LoginPassword2"
            style="@style/LoginPassword"
            android:hint ="@string/ConfirmPassword"/>
        <TextView
            style="@style/SpaceItem" />

        <LinearLayout
            style="@style/LoginButtonLayout">
            <Button
                android:id="@+id/OkButton"
                style="@style/LoginButton"
                android:text="@string/Ok" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        style="@style/LoginFooter"/>

    <TextView
        style="@style/LoginDensity"/>


</LinearLayout>

