<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CommonLayout">

    <include layout="@layout/activity_toolbar"/>

    <ScrollView android:id="@+id/Scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/UnderScrollLayout">
            <!--User Organization-->
            <LinearLayout
                style="@style/DetailLayout.Port">
                <TextView
                    style="@style/DetailItem.Header"
                    android:text="@string/LoginOrganization" />
                <EditText
                    android:id="@+id/LoginOrganization"
                    style="@style/DetailItem.Text"/>
                <TextView
                    style="@style/Separator"/>
            </LinearLayout>

            <!--User Name-->
            <LinearLayout
                style="@style/DetailLayout.Port">
                <TextView
                    style="@style/DetailItem.Header"
                    android:text="@string/LoginName" />
                <EditText
                    android:id="@+id/LoginName"
                    style="@style/DetailItem.Text"/>
                <TextView
                    style="@style/Separator"/>
            </LinearLayout>

            <!--Password-->
            <LinearLayout
                style="@style/DetailLayout.Port">
                <TextView
                    style="@style/DetailItem.Header"
                    android:text="@string/LoginPassword" />
                <EditText
                    android:id="@+id/LoginPassword"
                    style="@style/DetailItem.Text"
                    android:inputType="textPassword"/>
                <TextView
                    style="@style/Separator"/>
            </LinearLayout>

            <!--Ok-->
            <LinearLayout
                style="@style/DetailLayout.Port">
                <Button
                    android:id="@+id/OkButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Ok"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
