<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CommonLayout">

    <include layout="@layout/activity_toolbar"/>

    <ScrollView android:id="@+id/Scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/UnderScrollLayout">

            <!--OldPassword-->
            <LinearLayout
                style="@style/DetailLayout.Port">
                <TextView
                    style="@style/DetailItem.Header"
                    android:text="@string/OldPassword" />
                <EditText
                    android:id="@+id/OldPassword"
                    android:inputType="textPassword"
                    style="@style/DetailItem.Text"/>
                <TextView
                    style="@style/Separator"/>
            </LinearLayout>

            <!--LoginPassword-->
            <LinearLayout
                style="@style/DetailLayout.Port">
                <TextView
                    style="@style/DetailItem.Header"
                    android:text="@string/LoginPassword" />
                <EditText
                    android:id="@+id/LoginPassword"
                    android:inputType="textPassword"
                    style="@style/DetailItem.Text"/>
                <TextView
                    style="@style/Separator"/>
            </LinearLayout>


            <!--LoginPassword-->
            <LinearLayout
                style="@style/DetailLayout.Port">
                <TextView
                    style="@style/DetailItem.Header"
                    android:text="@string/ConfirmPassword" />
                <EditText
                    android:id="@+id/LoginPassword2"
                    android:inputType="textPassword"
                    style="@style/DetailItem.Text"/>
                <TextView
                    style="@style/Separator"/>
            </LinearLayout>

            <!--OK-->
            <LinearLayout
                style="@style/DetailLayout.Port">
                <Button
                    android:id="@+id/OkButton"
                    style="@style/CommonButton.Port"
                    android:text="@string/Ok"
                    />

            </LinearLayout>
            </LinearLayout>
    </ScrollView>



</LinearLayout>

